# filare

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .releaserc.toml  404.html  AGENTS.md  AGENTS_BRAND.md  CHANGELOG.md  Dockerfile  MANIFEST.in  NEXT_FEATURES.md  README.md  RefactorPlan.txt  TODO.md  advanced_image_usage.md  ci.md  cleanup.sh  devtools.txt  index.html  justfile  mkdocs.yml  pyproject.toml  remaining_work.temp  requirements.txt  sitemap.xml  syntax.md  uv.lock.backup
.github/workflows/: ci.yml  main.yml  pr-beta-ci.yml  pr-target-beta.yml  release-on-tag.yml
CHANGELOG/: index.html
CONTRIBUTING/: index.html
advanced_image_usage/: index.html
agents/: AGENT.COVERAGE.md  AGENT.DOCUMENTATION.md  AGENT.EXPLORATOR.md  AGENT.FEATURE.md  AGENT.FIXER.md  AGENT.JUDGE.md  AGENT.ORCHESTRATOR.md  AGENT.PROJECT_MANAGER.md  AGENT.REWORK.md  AGENT.TOOLS.md  AGENT.UI.md  AGENT.VALIDATOR.md  README.md  extra_commands.yml  filare_commands.yml  index.html  justfile  pyproject.toml
agents/manifest/: example.yaml
agents/prompts/: agent-just-commands.md  agent-prompt-gen.md  agent-prompt-link.md  bom-check.md  build-docs.md  build-examples.md  check-backlog-headers.md  check-overlap.md  check-tools.md  codex-container-build.md  codex-container-run.md  codex-container-sh.md  default.md  demo-first.md  docs-ci.md  example-first.md  filare-quick-sanity.md  filare-settings-get.md  full-ci-sanity.md  git-status.md  install-deps.md  lint-and-test-fast.md  lint.md  mermaid-gantt-check.md  mermaid-gantt.md  orchestrator-apply-review-feedback.md  orchestrator-delegate-coverage.md  orchestrator-delegate-documentation.md  orchestrator-delegate-explorator.md  orchestrator-delegate-feature.md  orchestrator-delegate-fixer.md  orchestrator-delegate-judge.md  orchestrator-delegate-project-manager.md  orchestrator-delegate-rework.md  orchestrator-delegate-tools.md  orchestrator-delegate-ui.md  orchestrator-delegate-validator.md  orchestrator-feedback-list.md  orchestrator-plan.md  orchestrator-resume-all.md  (+16 more)
agents/src/orchestrator/: __init__.py  cli.py  config.py  dashboard.py  docker_util.py  feedback.py  generate_manifest.py  io.py  run_container.py  runtime.py  workspace.py
agents/tests/: conftest.py  test_config.py  test_feedback.py  test_io.py  test_labels.py  test_runtime.py
architecture/: index.html
brand/: index.html
buildscript/: index.html
changelog/: index.html
ci/: index.html
collisions/summary/: index.html
dev/: metadata_guide.md
dev/codex-container/: index.html
dev/github/: index.html
dev/logging-sources/: index.html
dev/metadata_guide/: index.html
dev/pyright/: index.html
dev/text_overlap_checker/: index.html
docker/: Dockerfile.codex  overlap-check.Dockerfile
docs/: CHANGELOG.md  CONTRIBUTING.md  README.md  advanced_image_usage.md  agents.md  architecture.md  brand.md  buildscript.md  ci.md  docs_improvement.md  index.md  mermaid.md  mkdocs.md  pages.md  refactor.md  syntax.md  tasks.md
docs/collisions/: summary.md
docs/dev/: codex-container.md  github.md  logging-sources.md  metadata_guide.md  pyright.md  text_overlap_checker.md
docs/examples/: demo01.gv  demo01.html  ex02.gv  ex06.gv  ex06.html  ex07.gv  ex08.gv  ex09.gv  ex09.html  ex10.html  ex11.gv  ex11.html  ex12.gv  ex12.html  ex15.gv  ex15.html  readme.md  titlepage.html
docs/features/: bom-excel-export.md  bom_pagination.md  cavities-terminal-seal-support.md  cli-document-commands.md  cli-drawio-commands.md  cli-harness-commands.md  cli-hierarchical-commands.md  cli-metadata-commands.md  cli-page-commands.md  cli-settings-commands.md  cli-typer-migration.md  config-backlog.md  (+16 more)
docs_improvement/: index.html
examples/: 11.yml  demo01.document.yaml  demo01.html  demo01.yml  demo02.gv  demo02.html  demo02.yml  document_hashes.yaml  document_manifest.yaml  drawio-import-demo.yml  ex01.cut.html  ex01.document.yaml  ex01.html  ex01.index.html  ex01.termination.html  ex01.yml  ex02.cut.html  ex02.document.yaml  ex02.html  ex02.index.html  ex02.notes.html  ex02.termination.html  ex02.yml  ex03.cut.html  ex03.document.yaml  ex03.gv  ex03.html  ex03.index.html  ex03.termination.html  ex03.yml  ex04.cut.html  ex04.document.yaml  ex04.html  ex04.index.html  ex04.termination.html  ex04.yml  ex05.cut.html  ex05.document.yaml  ex05.gv  ex05.html  (+46 more)
features/: index.html
graphs/: architecture.md
issues/: index.html
mermaid/: index.html
mkdocs/: index.html
pages/: index.html
refactor/: index.html
research/: index.html
scripts/: agent-setup.sh  bisect-run.sh  check-mermaid.sh  check-tools.sh  check_backlog_headers.py  export_taskwarrior.py  generate_agent_prompts.py  generate_filare_agent_commands.py  generate_graphviz_timeline.py  generate_mermaid_gantt.py  get_structured_review.py  install-deps.sh  install-tool.sh  lint.sh  pre-commit.sh  pyright.sh  review_changes.py  run_codex_container.sh  sync-readme-to-docs.sh  taskwarrior_backfill.py  taskwarrior_branch.py  taskwarrior_next.py  taskwarrior_split_pools.py  taskwarrior_update.py
search/: search_index.json
syntax/: index.html
tasks/: index.html
tests/: __init__.py  conftest.py  pyrightconfig.json  test_harness_quantity_cli.py  test_index_table.py  test_multi_harness_document.py  test_settings.py  test_typer_settings.py
tutorial/: document_hashes.yaml  document_manifest.yaml  metadata.yml  readme.md  shared_bom.tsv  titlepage.bom.html  titlepage.html  titlepage.index.html  titlepage_for_pdf.html  tutorial01.bom.html  tutorial01.document.yaml  tutorial01.gv  tutorial01.html  tutorial01.index.html  tutorial01.notes.html  tutorial01.tsv  tutorial01.yml  tutorial02.bom.html  tutorial02.document.yaml  tutorial02.gv  tutorial02.html  tutorial02.index.html  tutorial02.tsv  tutorial02.yml  tutorial03.bom.html  tutorial03.document.yaml  tutorial03.gv  tutorial03.html  tutorial03.index.html  tutorial03.notes.html  tutorial03.tsv  tutorial03.yml  tutorial04.bom.html  tutorial04.document.yaml  tutorial04.gv  tutorial04.html  tutorial04.index.html  tutorial04.notes.html  tutorial04.tsv  tutorial04.yml  (+31 more)
ui/: index.html
(+934 files in other folders)
