[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "filare"
dynamic = ["version"]
description = "Easily document cables and wiring harnesses"
readme = "docs/README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
authors = [{ name = "Laurier Loiselle" }]
keywords = ["filare", "wireviz", "wiring", "harness", "cables", "documentation", "graphviz"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Documentation",
    "Typing :: Typed",
]
urls = { Homepage = "https://github.com/laurierloi/filare", Repository = "https://github.com/laurierloi/filare.git", Issues = "https://github.com/laurierloi/filare/issues", Documentation = "https://laurierloi.github.io/filare/" }
dependencies = [
    "click",
    "graphviz",
    "pillow",
    "pyyaml",
    "tabulate",
    "jinja2",
    "weasyprint",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
]

[project.scripts]
filare = "filare.cli:cli"
filare-qty = "filare.models.harness_quantity:qty_multipliers"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.6.0",
    "isort>=5.12.0",
    "black>=24.0.0",
    "pre-commit>=3.7.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.34",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.6.0",
    "isort>=5.12.0",
    "black>=24.0.0",
    "pre-commit>=3.7.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.34",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
filare = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=1 -ra --cov=filare --cov-report=term-missing --cov-report=html:report/coverage"
markers = [
    "examples: slow example generation",
    "tutorial: slow tutorial generation",
]

[tool.coverage.run]
branch = true
source = ["src/filare"]
omit = [
    "src/filare/render/pdf.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "report/coverage"

[tool.semantic_release]
version_toml = []
branch = "main"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): v{version}"
commit_author = "semantic-release <semantic-release@users.noreply.github.com>"
upload_to_pypi = true
upload_to_release = true
build_command = "uv build"
version_variable = ["VERSION"]
version_pattern = "^(?P<version>.*)$"
changelog_sections = [
    { type = "feat", section = "Features", hidden = false },
    { type = "fix", section = "Fixes", hidden = false },
    { type = "perf", section = "Performance", hidden = false },
    { type = "refactor", section = "Refactor", hidden = false },
    { type = "docs", section = "Documentation", hidden = false },
    { type = "build", section = "Build", hidden = false },
    { type = "ci", section = "CI", hidden = false },
    { type = "chore", section = "Chores", hidden = false },
]
[tool.isort]
profile = "black"
